# due-diligence-bot

./: .gitignore  README.md  pyproject.toml  report.md
db/: chroma.sqlite3
src/company_due_dilligence/: crew.py  main.py
src/company_due_dilligence/config/: agents.yaml  tasks.yaml
