[project]
name = "company_due_dilligence"
version = "0.1.0"
description = "company-due-dilligence using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
company_due_dilligence = "company_due_dilligence.main:run"
run_crew = "company_due_dilligence.main:run"
train = "company_due_dilligence.main:train"
replay = "company_due_dilligence.main:replay"
test = "company_due_dilligence.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
